# gen-ai-sd

./: .envexample  .gitignore  README.md
autogen/: requirements.txt
autogen/notebook/: routing_multiagent_autogen.ipynb  routing_multiagent_autogen_v2.ipynb
bedrock/: requirements.txt
bedrock/notebook/: basic_agent.ipynb  helper.py
crewai/: README.md  google.serper.dev.pem  google.serper.pem  requirements.txt
crewai/content_writer/: README.md  pyproject.toml
crewai/content_writer/src/content_writer/: crew.py  main.py
crewai/content_writer/src/content_writer/config/: agents.yaml  tasks.yaml
crewai/fullstack/: README.md
crewai/fullstack/crewai_be/: README.md  agents.py  api.py  crew.py
crewai/instagram-llama3-crewai/: OUTPUT.md  agents.py
crewai/notebook/: README.md  analyze_sprint.ipynb  basic_research_write_article.ipynb  example_SerperDevTool.ipynb  human_input.ipynb  multiagent_customer_support.ipynb  multiagent_hierarchy_customer_support_v2.ipynb  routing_multiagent.ipynb  sequential_customer_support_agent.ipynb
crewai/notebook/analyze_sprint/: 2451.txt  agents.yaml  tasks.yaml
crewai/notebook/dl.ai/: 1_project_planning_estimation_allocation.ipynb  2_project_progress_report.ipynb  3_sales_pipeline.ipynb  4_support_data_analysis.ipynb  (+4 more)
general/imageprocessing-python-opencv/: README.md
langchain/: requirements.txt
langchain/notebook/: basic_agent_examples_react_and_structured.ipynb  basic_example_llm.ipynb  routing_multiagent.ipynb
llamaindex/: requirements.txt
llamaindex/notebook/: 1_basic_workflow.ipynb  2_workflow_with_RAG.ipynb
(+28 files in other folders)
