[project]
name = "content_writer"
version = "0.1.0"
description = "content-writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
content_writer = "content_writer.main:run"
run_crew = "content_writer.main:run"
train = "content_writer.main:train"
replay = "content_writer.main:replay"
test = "content_writer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
